# Salmon-Engine

./: .clang-format  .gitignore  ;  CHANGELOG.md  CMakeLists.txt  PROJECT.md  README.md  TODO.md  bash.exe.stackdump  bruh  compile_commands.json  imgui.ini  issue
bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Salmon.sln  Salmon.vcxproj  Salmon.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
bld/Salmon.dir/Debug/: Salmon.exe.recipe
bld/Salmon.dir/Debug/Salmon.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Salmon.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bld/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
bld/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
bld/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
bld/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: scripting_reference.md
include/: animation.h  assimp_glm_helpers.h  bone.h  camera.h  components.h  ecs.h  editor_layer.h  engine.h  imgui_layer.h  input.h  mesh.h  model.h  physics.h  renderer.h  salmon.h  scene_manager.h  shader.h  sound_buffer.h  sound_device.h  sound_source.h  utils.h  window.h
include/Jolt/Physics/Body/: Body.h
include/salmon/: animation.h  assimp_glm_helpers.h  bone.h  camera.h  clock.h  components.h  ecs.h  editor.h  engine.h  imgui_layer.h  input.h  json.hpp  mesh.h  model.h  particle_system.h  physics.h  renderer.h  salmon.h  shader.h  sound_buffer.h  sound_device.h  sound_source.h  sprite_animation.h  ui.h  ui_systems.cpp  utils.h  window.h
include/sm2d/: colliders.cpp  colliders.h  functions.cpp  functions.h  systems.cpp  types.h
include/smphys/: sm_body.cpp  sm_body.h  smphys.h
include/syslocked/: components.h
lib/: OpenAL32.exp  alsoft.common.lib  assimp-vc143-mt.lib  freetype.lib  glfw3.lib
res/models/: Box.mtl  Kiwi.mtl  Shotgun.dae  Shotgun.mtl  ShotgunShoot.dae  Tile.glb  low_poly_kiwi_run.glb  shotgun.blend  shotgun.blend1  tile.blend  tile.blend1  tile.mtl  untitled.glb
res/models/stray/: Stray.blend  Stray.blend1  Stray.dae  StrayRun.dae
res/scenes/: Scene.json  scene1.json
shaders/: 2d_vertex.shad  3d_fragment.shad  3d_vertex.shad  fragment.shad  fragment2d.shad  linefragment.shad  particle_fragment.shad  particle_vertex.shad  particlevertex.shad  shadow_fragment.shad  shadowgeometry.shad  text_fragment.shad  vertex.shad
src/: animation.cpp  camera.cpp  component_registers.cpp  ecs.cpp  editor.cpp  editor_layer.cpp  extra_systems.cpp  imgui_layer.cpp  input.cpp  main.cpp  particle_system.cpp  renderer.cpp  salmon.cpp  scene_manager.cpp  sound_buffer.cpp  sound_device.cpp  sound_source.cpp  sprite_animation.cpp  stb.cpp  systems.cpp  utils.cpp  window.cpp
src/syslocked/: enemy_systems.cpp  main.cpp  systems.cpp
